<resources>
    <string name="app_name">Notasapp</string>
    <string name="exposiciones">Exposiciones</string>
    <string name="practicas">Prácticas</string>
    <string name="proyecto">Proyecto</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="notafinal">Nota Final</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="porcentaje">Porcentaje (%)</string>
    <string name="guardar">Guardar</string>
    <string name="configurar">Configuración %</string>

</resources>
