<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prieto.william.notasapp.MainActivity"
    android:orientation="vertical">

    <TextView
        style="@style/textViewStyle.grande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.5"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        style="@style/textViewStyle.peque"
                        android:text="@string/exposiciones"
                        android:id="@+id/tE"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/tExpo"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        style="@style/textViewStyle.peque"
                        android:text="@string/practicas"
                        android:gravity="center"
                        android:layout_width="154dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/tPrac"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/textViewStyle.peque"
                        android:text="@string/proyecto"
                        android:gravity="center"
                        android:layout_width="154dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/tProy"
                        />

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1.5"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="23dp"
                        android:layout_height="match_parent"
                        android:hint="%"
                        android:gravity="center"
                        />
                    <EditText
                        style="@style/editTextStyle"
                        android:id="@+id/eExp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="23dp"
                        android:layout_height="match_parent"
                        android:hint="%"
                        android:gravity="center"
                        />
                    <EditText
                        style="@style/editTextStyle"
                        android:id="@+id/ePrac"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="23dp"
                        android:layout_height="match_parent"
                        android:hint="%"
                        android:gravity="center"
                        />
                    <EditText
                        style="@style/editTextStyle"
                        android:id="@+id/eProy"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/limpiar"
                    android:id="@+id/blimpiar"/>
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calcular"
                    android:id="@+id/bcalcular"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    style="@style/textViewStyle.peque"
                    android:text="@string/notafinal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/notafinal"
                    android:enabled="false"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:id="@+id/eNotaF"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
